--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
+.DS_Store
+node_modules
+output
+public-dist
+$__StoryList.tid
+settings/settings.json
+tiddlers/subwiki/
 
-tiddlers/$__StoryList.tid
+# ignore some change from plugin that will only change "modified" field
+$__keepstate_*
+tiddlers/$__plugins_felixhayashi_tiddlymap_misc_defaultViewHolder.tid
