完善了一下首页

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,12 @@ tiddlers/subwiki/
 
 # ignore some change from plugin that will only change "modified" field
 $__keepstate_*
-tiddlers/$__plugins_felixhayashi_tiddlymap_misc_defaultViewHolder.tid
+
+$__Import.tid
+
+$__plugins_felixhayashi_tiddlymap_misc_defaultViewHolder.tid
+$__view.tid
+Have fun with.tid
+TiddlyMap!!.tid
+$__config_Navigation_openLinkFromInsideRiver.tid
+$__config_Navigation_openLinkFromOutsideRiver.tid
