--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -20,10 +20,13 @@ jobs:
           path: |
             **/node_modules
           key: ${{ runner.os }}-${{ hashFiles('**/package.json') }}
+
       - name: 安装 NodeJS 依赖
         run: npm install
       - name: 构建
         run: npm run buildonline && npm run buildlibrary
+      - name: Workbox 离线缓存
+        run: npx workbox injectManifest workbox-config.js
 
       - name: 部署
         uses: peaceiris/actions-gh-pages@v3
