Update notion pageicon to 0.0.4

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@ Have fun with.tid
 TiddlyMap!!.tid
 $__config_Navigation_openLinkFromInsideRiver.tid
 $__config_Navigation_openLinkFromOutsideRiver.tid
+tiddlers/$__UpgradeLibrary.json
+tiddlers/$__UpgradeLibrary.json.meta
+tiddlers/$__plugins_linonetwo_commandpalette_CommandPaletteHistory.json
+tiddlers/$__plugins_linonetwo_commandpalette_CommandPaletteHistory.json.meta
