插件教程勘误，更新构建脚本

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "scripts": {
-    "test": "node -e \"require('./scripts/build').runServer();\"",
+    "server": "npx cross-env TIDDLYWIKI_PLUGIN_PATH='./plugins' TIDDLYWIKI_THEME_PATH='./themes' TIDDLYWIKI_LANGUAGE_PATH='./languages' npx tiddlywiki . --listen port=8080",
     "buildonline": "node -e \"require('./scripts/build').buildOnlineHTML('public-dist', 'index.html');\"",
     "buildoffline": "node -e \"require('./scripts/build').buildOfflineHTML('public-dist', 'offline.html');\"",
     "buildlibrary": "node -e \"require('./scripts/build').buildLibrary('[prefix[$:/]!prefix[$:/plugins/tiddlywiki/]!prefix[$:/themes/tiddlywiki/]!prefix[$:/languages/]!tag[$:/tags/PluginLibrary]!prefix[$:/plugins/kookma]]', 'public-dist/library');\""
   },
   "devDependencies": {
     "@tiddlygit/tiddlywiki": "5.2.0-prerelease.20211002",
+    "cross-env": "^7.0.3",
     "html-minifier-terser": "6.1.0",
     "uglify-js": "3.14.4",
     "workbox-cli": "6.4.1"
