--- a/package.json
+++ b/package.json
@@ -6,13 +6,10 @@
     "buildlibrary": "node -e \"require('./scripts/build').buildLibrary('[prefix[$:/]!prefix[$:/plugins/tiddlywiki/]!prefix[$:/themes/tiddlywiki/]!prefix[$:/languages/]!tag[$:/tags/PluginLibrary]!prefix[$:/plugins/kookma]]', 'public-dist/library');\""
   },
   "devDependencies": {
-    "@tiddlygit/tiddlywiki": "5.2.3-prerelease-2022-04-09",
     "cross-env": "7.0.3",
     "html-minifier-terser": "6.1.0",
+    "tiddlywiki": "^5.2.3",
     "uglify-js": "3.15.4",
     "workbox-cli": "6.5.3"
-  },
-  "dependencies": {
-    "tiddlywiki": "^5.2.3"
   }
 }
